--- a/.github/workflows/auto-deployer.yml
+++ b/.github/workflows/auto-deployer.yml
@@ -1,52 +1,43 @@
 # This workflow will build a Java project with Gradle and deploy to GitHub Releases
 name: Deploy to GitHub Releases
-
 on:
   push:
     branches: [ "main" ]
-
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
-
       - name: Set up JDK 21
         uses: actions/setup-java@v4.1.0
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: gradle
-
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.11.1
-
       - name: Build with Gradle
         run: ./gradlew shadowJar
-
       - name: Get project version
         id: get-version
         run: echo "VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')" >> $GITHUB_OUTPUT
-
       - name: Get project name
         id: get-name
         run: echo "NAME=$(./gradlew properties -q | grep "name:" | awk '{print $2}')" >> $GITHUB_OUTPUT
-
       - name: Create staging directory
         run: mkdir staging
-
       - name: Copy JAR to staging
         run: |
           cp build/libs/Defcon-${{ steps.get-version.outputs.VERSION }}.jar staging/
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4.3.1
         with:
           name: Package
           path: staging
           retention-days: 1
-
       - name: Create GitHub Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
